tests/bad/struct_redef.ae
/// fail: Struct has already been defined

struct Foo {
    a: i32
}

struct Foo {
    b: bool
}